--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,111 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Roboto&display=swap');
+
 *{
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    
+}
+
+
+header{
+    padding: 10px 20px;
+    background-color: white;
+    
+}
+
+ #logo{
+    vertical-align: middle;
+}
+
+ #logo-text{
+    vertical-align: middle;
+    font-size: 40px; 
+    font-weight: bolder;  
+}
+
+main{
+    background-color: #f6f8f9;
+    margin: auto;
+    display: flex;
+}
+
+.container{
+    background: white;
+    width:60%;
+    border-radius: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    padding-top: 40px;
+}
+
+.buttons{
+height: 50px;
+padding: 0 40px;
+}
+
+#add-task, #add-section{
+    border-radius: 9%;
+    padding: 10px 10px;
+}
+
+#add-task {
+    background-color: #47adf1;
+    color: white;
+}
+
+#add-section{
+    background: white;
+    border: 1px solid #828383;
+    color: #828383;
+}
+
+.divider{
+    height: 1px;
+    margin: auto;
+    background-color: #cccccc ;
+}
+
+.lists{
+    padding: 20px 40px;
+}
+
+.title::before{
+    content: '\25BE';
+}
+
+.title{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+ul{
+    list-style: none;
+}
+.done::before{
+    content:'\2713';
+    color: green;
+    font-size: 12px;
+    border: 1px solid green;
+    border-radius: 50%;
+    padding: 5px;
+    width: 10px;
+    height: 10px;
+}
+
+.done{
+ min-width: 30px;
+}
+
+.buttonz{
+color: white;
+border-radius: 25%;
+padding: 5px 7px;
+font-size: 0.7rem;
+}
+
+.editorial{
+    background-color: #47adf1;
 }
