--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    
+    list-style-type: none;
+    text-decoration: none;
 }
 
 
@@ -37,6 +38,7 @@ body{
     margin-top: 30px;
     border-radius: 13px;
     padding-top: 40px;
+    padding-bottom: 20px;
 }
 
 .buttons{
@@ -80,18 +82,17 @@ padding: 0 40px;
     margin-top: 20px;
 }
 
-ul{
-    list-style: none;
-}
 .done::before{
     content:'\2713';
     color: green;
     font-size: 12px;
     border: 1px solid green;
     border-radius: 50%;
-    padding: 5px;
-    width: 10px;
-    height: 10px;
+    width: 17px;
+    height: 17px;
+    display: inline-block;
+    text-align: center;
+
 }
 
 .done{
@@ -123,9 +124,10 @@ font-size: 0.7rem;
     font-size: 12px;
     border: 1px solid red;
     border-radius: 50%;
-    padding: 5px;
-    width: 10px;
-    height: 10px;
+    width: 17px;
+    height: 17px;
+    display: inline-block;
+    text-align: center;
 }
 
 .recruiting{
