--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ header{
 
  #logo-text{
     vertical-align: middle;
-    font-size: 40px; 
+    font-size: 1.3rem; 
     font-weight: bolder;  
 }
 
